--- a/css/general.css
+++ b/css/general.css
@@ -54,6 +54,7 @@ Default: 9px
   box-shadow: inset 0 0 0 3px #fff;
   transition: all 0.3s;
   overflow: hidden;
+  overflow-x: hidden;
   margin-top: auto;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   transform: translateY(-2rem);
@@ -74,6 +75,16 @@ Default: 9px
     outline: none;
     box-shadow: 0 0 0 0.4rem rgba(230, 125, 34, 0.5);
   }
+  .icon-mobile-nav[name="close-outline"] {
+    display: none;
+  }
+  .nav-open .main-nav{
+    opacity: 1;
+  }
+  grid-column: span 3;
+  .step-img-box:nth-child(2) {
+    grid-row: 1;
+  }
 
 */
 
@@ -88,6 +99,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -95,6 +107,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 
 /*****************************/
@@ -127,10 +140,6 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
-.grid--5-cols {
-  grid-template-columns: repeat(5, 1fr);
-}
-
 .grid--center-v {
   align-items: center;
 }
@@ -152,7 +161,7 @@ body {
 .heading-secondary {
   font-size: 4.4rem;
   line-height: 1.2;
-  margin-bottom: 9.6rem; 
+  margin-bottom: 9.6rem;
 }
 
 .heading-tertiary {
@@ -183,22 +192,22 @@ body {
 
   font-family: inherit;
   cursor: pointer;
-  border: none;;
+  border: none;
 
   transition: all 0.3s;
   /* transition: background-color 0.3s; */
 }
 
 .btn--form {
-    background-color: #45260a; 
-    color: #fdf2e9;
-    padding: 1.2rem;
-    align-self: end;
+  background-color: #45260a;
+  color: #fdf2e9;
+  padding: 1.2rem;
+  align-self: end;
 }
 
 .btn--form:hover {
-    background-color: #fff;
-    color: #333;
+  background-color: #fff;
+  color: #333;
 }
 
 .link:link,
@@ -229,6 +238,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 .list-icon {
@@ -238,8 +248,8 @@ body {
 }
 
 *:focus {
-    outline: none;
-    box-shadow: 0 0 0 0.4rem rgba(230, 125, 34, 0.5);
+  outline: none;
+  box-shadow: 0 0 0 0.4rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPER/SETTINGS CLASSES */
