--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
 /*****************************/
 /* HEADER */
 /*****************************/
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #fdf2e9;
 
   height: 9.6rem;
-  padding: 4.8rem;
+  padding: 0 4.8rem;
+
+  position: relative;
 }
 
 .logo {
@@ -19,7 +21,7 @@ header {
 .main-nav-list {
   list-style: none;
   display: flex;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 
 .main-nav-link:link,
@@ -48,6 +50,25 @@ header {
 .main-nav-link.nav-cta:visited {
   background-color: #cf711f;
   transition: all 0.3s;
+}
+
+/* MOBILE NAVIGATION*/
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 
 /*****************************/
@@ -623,7 +644,7 @@ header {
 }
 
 .footer-link:link,
-.foooter-link:visited {
+.footer-link:visited {
   text-decoration: none;
   color: #767676;
   font-size: 1.6rem;
