--- a/css/general.css
+++ b/css/general.css
@@ -54,10 +54,12 @@ Default: 9px
   box-shadow: inset 0 0 0 3px #fff;
   transition: all 0.3s;
   overflow: hidden;
+  z-index: -2;
   overflow-x: hidden;
   margin-top: auto;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   transform: translateY(-2rem);
+  scroll-behavior: smooth;
   opacity: 100%;
   filter: blur();
   font-family: inherit;
@@ -100,6 +102,7 @@ html {
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
