--- a/css/queries.css
+++ b/css/queries.css
@@ -126,7 +126,8 @@ Instead, 1rem = 1em = 16px */
   }
 
   .main-nav {
-    background-color: #fffffff1;
+    backdrop-filter: blur(15px);
+    background-color: rgba(255, 255, 255, 0.5);
     position: absolute;
     top: 0;
     left: 0;
